feat: 루트 연관 API 로직 수정, 응답 DTO 수정(#51)